Changed filterset for GCMD Phenomenon list to use correct fields. Updated styling of filter bar to be less cramped.

--- a/admin_ui/static/css/admin.css
+++ b/admin_ui/static/css/admin.css
@@ -146,3 +146,16 @@ span.sidebar-notification {
   background: red;
   border-radius: 10px;
 }
+
+/* Forms */
+.form-inline {
+  margin-bottom: 0.5em;
+}
+
+.form-inline .form-group {
+  margin-right: 1em;
+}
+
+.form-inline .form-group label {
+  margin-right: 0.4em;
+}
